--- a/paper/sections/07-metadata.tex
+++ b/paper/sections/07-metadata.tex
@@ -1,32 +1,100 @@
 \section{Metadata and Discovery Framework}
 \label{sec:metadata}
 
-% TODO: Extract content from docs/chapters/describing-a-microsim.md
-% Key sections to include:
-% - Search and Reuse: You can't reuse what you can't find - why AI needs great templates, the power of faceted search
-% - Dublin Core metadata framework using standard element to describe microsim resources
-% - Educational metadata components - adding subject, educational level, interactivity type
-% - Technical specifications - JSON Schema for microsim metadata
-% - Simulation model documentation - list of controls, parameters, outputs for event monitoring
-% - Learning analytics support - using the xAPI to track user interactions
-% - Discovery and personalization - enabling search, filtering, and recommendations
-% - JSON Schema structure - defining required and optional fields - how generative AI can generate precise metadata if the schema is correctly designed
+As educational technology continues to evolve toward AI-generated, personalized learning experiences, the challenge of organizing and discovering appropriate digital learning resources has become increasingly complex. Educational MicroSims represent a promising approach to personalized, engaging instruction, but as collections of these resources grow into the tens of thousands, educators and institutions need robust systems for cataloging, searching, and integrating these materials into their curricula.
 
-\subsection{Search and Reuse}
+This section presents a comprehensive metadata framework specifically designed for Educational MicroSims that addresses organizational challenges while supporting the pedagogical needs of diverse educational contexts. The framework combines established cataloging standards with education-specific metadata and detailed technical specifications to enable sophisticated search, recommendation, and integration capabilities.
+
+\subsection{Search and Reuse: The Foundation of Educational Resource Discovery}
+
+The fundamental principle underlying effective educational resource management is simple yet critical: educators cannot reuse what they cannot find. Traditional educational resource repositories often suffer from inconsistent cataloging practices, making it difficult for educators to locate materials that match their specific needs. A mathematics teacher seeking a simulation for teaching quadratic functions might struggle to locate appropriate resources among thousands of available options, particularly when materials are tagged inconsistively or lack detailed descriptions of their educational purpose, technical requirements, or pedagogical applications.
+
+The proliferation of AI-generated educational content exacerbates this challenge. While artificial intelligence can rapidly create customized learning materials, these resources require systematic organization to be truly useful at scale. Without standardized metadata, even the most sophisticated educational simulation becomes effectively invisible to educators who could benefit from its use. The power of generative AI in creating educational content can only be fully realized when paired with comprehensive metadata frameworks that enable discovery and integration.
+
+Faceted search capabilities represent a particularly powerful approach to educational resource discovery. Rather than relying on simple keyword matching, faceted search enables educators to filter resources across multiple dimensions simultaneously. An educator can specify grade level (9-12), subject area (chemistry), topic (molecular bonding), desired cognitive level (apply or analyze), and technical requirements (tablet compatibility) to receive a precisely curated list of relevant simulations. This approach transforms resource discovery from a time-consuming challenge into an efficient, targeted activity.
 
 \subsection{Metadata Requirements}
 
+The MicroSims metadata framework employs a layered approach that builds upon established standards while incorporating domain-specific requirements for educational technology. This structured approach ensures compatibility with existing systems while providing the detailed specifications necessary for educational applications.
+
 \subsubsection{Dublin Core Foundation}
+
+At its foundation, the metadata schema incorporates Dublin Core metadata standards—internationally recognized elements for describing digital resources. This ensures compatibility with existing educational repositories and library systems while providing essential information for resource management and discovery. The Dublin Core elements integrated into the MicroSims framework include:
+
+\textbf{Core Elements}: Title, creator, subject, description, publisher, date, type, format, identifier, language, relation, coverage, and rights provide the fundamental cataloging information required for institutional repositories and library systems.
+
+\textbf{Educational Adaptation}: While maintaining Dublin Core compliance, the schema extends these elements to address educational-specific requirements. The \textit{subject} field employs controlled vocabularies that prevent confusion caused by synonym variations, ensuring that resources tagged as "mathematics" and "math" appear together in search results. The \textit{type} field uses educational resource type specifications that distinguish between simulations, demonstrations, and interactive assessments.
+
+\textbf{Rights and Licensing}: The Dublin Core rights element is enhanced to support Creative Commons licensing and educational use restrictions, enabling institutions to filter resources based on permissible usage scenarios and compliance requirements.
 
 \subsubsection{Educational Extensions}
 
+The educational metadata component extends beyond basic cataloging to capture pedagogically relevant information essential for curriculum integration and instructional design. These extensions address the specific needs of educators selecting resources for particular learning objectives and contexts.
+
+\textbf{Grade Level Specifications}: Standardized grade level categories from kindergarten through graduate study enable precise targeting of age-appropriate materials. The framework accommodates both traditional grade levels (K-12) and post-secondary categories (Undergraduate, Graduate, Adult Education) to support diverse educational contexts.
+
+\textbf{Learning Objectives and Taxonomy}: Perhaps most significantly, the schema incorporates Bloom's Taxonomy classifications, allowing educators to search for resources that target specific cognitive skill levels. This enables teachers to locate simulations that support factual recall (Remember level), conceptual understanding (Understand level), or creative application (Create level) depending on their instructional goals.
+
+\textbf{Curriculum Standards Alignment}: The framework supports alignment with multiple curriculum standards frameworks, including Common Core State Standards (CCSS), Next Generation Science Standards (NGSS), and International Society for Technology in Education (ISTE) standards. This alignment enables curriculum coordinators to ensure that selected resources support mandated learning standards.
+
+\textbf{Cognitive Load Assessment}: The schema incorporates cognitive load theory principles through structured assessment of intrinsic, extraneous, and germane cognitive load. This information helps educators select appropriate resources based on student cognitive capacity and instructional design principles.
+
 \subsubsection{Technical Specifications}
+
+Technical metadata addresses the implementation requirements essential for successful deployment in diverse technological environments. These specifications enable technical staff to quickly assess integration requirements while supporting educational decision-making about device compatibility and accessibility features.
+
+\textbf{Platform Compatibility}: Canvas dimensions, framework dependencies, browser compatibility, and device requirements provide comprehensive technical specifications. Performance metrics including target frame rates, memory usage, and computational complexity enable informed deployment decisions for institutions with varied technological infrastructure.
+
+\textbf{Accessibility Compliance}: Accessibility features are explicitly documented, supporting inclusive design principles and compliance with educational accessibility standards such as Section 508 and Web Content Accessibility Guidelines (WCAG). This documentation includes screen reader compatibility, keyboard navigation support, and alternative input methods.
+
+\textbf{Responsive Design Documentation}: The framework documents responsive behavior patterns, including breakpoint specifications and adaptive interface elements. This information supports deployment across diverse device ecosystems commonly found in educational environments.
 
 \subsubsection{Simulation Model Documentation}
 
+A unique aspect of the metadata framework involves comprehensive documentation of the underlying simulation models. Unlike black-box educational software, MicroSims benefit from transparent documentation of their mathematical equations, algorithms, assumptions, and limitations. This transparency serves multiple educational purposes and enables informed pedagogical application.
+
+\textbf{Mathematical Foundations}: The schema documents the mathematical equations, algorithms, and computational methods underlying each simulation. This information enables educators to understand exactly what concepts the simulation demonstrates and helps students appreciate the relationship between mathematical models and real-world phenomena.
+
+\textbf{Model Limitations and Assumptions}: Explicit documentation of simplifying assumptions and model limitations provides educational context for simulation results. For example, a physics simulation modeling projectile motion documents not only the kinematic equations used but also simplifying assumptions such as the absence of air resistance.
+
+\textbf{Variable Specifications}: Comprehensive documentation of input variables, parameters, and output measures supports both educational implementation and learning analytics integration. This documentation includes variable types (input, output, intermediate, constant), data types, units of measurement, and acceptable value ranges.
+
 \subsection{Discovery and Cataloging}
+
+When applied consistently across thousands of MicroSims, this metadata framework enables sophisticated search and recommendation capabilities that transform how educators discover and integrate educational resources. The structured approach to resource description supports multiple discovery modalities while enabling automated personalization and curriculum integration.
+
+\textbf{Faceted Search Implementation}: The comprehensive metadata structure enables sophisticated faceted search interfaces where educators can filter resources across multiple dimensions simultaneously. Search interfaces can provide filtering options for grade level, subject area, learning objectives, technical requirements, accessibility features, and pedagogical approaches. This multi-dimensional filtering approach significantly reduces the time required to locate appropriate resources while ensuring pedagogical alignment.
+
+\textbf{Automated Recommendation Systems}: The standardized metadata enables intelligent recommendation systems that can suggest resources based on curricular context, student performance data, and educational objectives. By documenting how learning objectives, difficulty levels, and prerequisite knowledge are structured, the framework enables adaptive learning systems to make evidence-based recommendations about which simulations will best support individual student needs.
+
+\textbf{Curriculum Integration}: The framework supports automated curriculum mapping where educational resources can be systematically aligned with instructional sequences and learning progressions. Standards alignment metadata enables curriculum coordinators to ensure comprehensive coverage of mandated learning objectives while identifying gaps in available resources.
+
+\textbf{Quality Assurance and Curation}: Structured metadata enables automated quality assessment based on completeness of documentation, alignment with educational standards, and technical compliance requirements. This systematic approach to quality assurance supports scalable curation processes essential for large-scale educational resource collections.
 
 \subsection{Learning Analytics Integration}
 
-\subsection{JSON Schema Structure}
-% Additional content to be extracted from source files
+The metadata framework incorporates comprehensive specifications for learning analytics data collection and analysis, enabling the development of sophisticated educational measurement and adaptive learning capabilities. This integration addresses both the technical requirements for data collection and the educational considerations necessary for meaningful learning assessment.
+
+\textbf{Event Tracking Specifications}: The schema documents standardized event types and data collection protocols that enable consistent learning analytics across different MicroSims. Events are categorized by type (interaction, navigation, learning, performance, engagement, error) and importance level, enabling prioritized data collection that balances analytical value with privacy considerations.
+
+\textbf{Learning Indicators Documentation}: The framework specifies behavioral indicators that provide evidence of learning progress, including both direct measures (correct responses, task completion) and indirect measures (engagement patterns, exploration behaviors). This documentation enables learning analytics systems to make informed inferences about student understanding and skill development.
+
+\textbf{Privacy and Compliance Framework}: Educational data privacy considerations are explicitly addressed through comprehensive documentation of data collection practices, retention policies, and compliance requirements. The framework supports adherence to educational privacy standards including FERPA, GDPR, and institutional data governance policies.
+
+\textbf{Adaptive Learning Support}: The metadata documents which elements of each simulation can be adapted based on student performance and how adaptation algorithms should interpret learning analytics data. This specification enables intelligent tutoring systems to provide personalized learning experiences that adjust difficulty, provide additional scaffolding, or recommend alternative resources based on individual student needs.
+
+\subsection{JSON Schema Structure and Implementation}
+
+The technical implementation of the metadata framework employs JSON Schema specifications that enable both human curation and automated generation of resource descriptions. This structured approach provides the precision necessary for machine processing while maintaining accessibility for human editors and educational practitioners.
+
+\textbf{Hierarchical Organization}: The schema employs a hierarchical structure that groups related metadata elements while maintaining clear separation between different types of information. Core sections include Dublin Core elements, search and discovery metadata, educational specifications, technical requirements, user interface documentation, simulation models, and analytics specifications.
+
+\textbf{Validation and Consistency}: JSON Schema validation rules ensure metadata consistency and completeness across large collections of educational resources. Required fields, enumerated values, and format constraints prevent common metadata quality issues while enabling automated validation workflows that scale to thousands of resources.
+
+\textbf{Extensibility and Versioning}: The schema structure accommodates future extensions while maintaining backward compatibility with existing metadata. Versioning protocols ensure that metadata evolution can occur without disrupting existing educational technology systems or invalidating previously created resource descriptions.
+
+\textbf{AI-Generated Metadata}: The structured schema design specifically supports automated metadata generation by large language models and other AI systems. Clear field definitions, enumerated values, and validation constraints enable AI systems to generate comprehensive, accurate metadata that meets educational and technical requirements without extensive human review.
+
+\textbf{Implementation Example}: The bouncing ball physics simulation demonstrates the framework's comprehensive approach to metadata documentation. The educational metadata specifies grade levels (6-10), subject areas (Physics, Mathematics, Science), and Bloom's taxonomy levels (Understand, Apply, Analyze). Technical specifications document p5.js framework requirements, responsive canvas dimensions (400×430 pixels), and browser compatibility. User interface documentation details the speed control slider with range 0-20, default value 3, and responsive sizing behavior. The simulation model section documents the kinematic equations, collision detection algorithms, and model assumptions including perfect elastic collisions and absence of friction. This comprehensive documentation enables educators to quickly assess the simulation's appropriateness for their instructional context while providing technical staff with implementation requirements and learning analytics systems with standardized data collection specifications.
+
+The metadata framework represents a foundational component for scalable educational technology ecosystems. By providing comprehensive, structured descriptions of educational resources, the framework enables the sophisticated discovery, integration, and analytical capabilities necessary to realize the full potential of digital learning environments. As educational institutions continue to invest in interactive learning resources, systematic metadata frameworks ensure these investments achieve maximum pedagogical impact through enhanced discoverability, appropriate application, and seamless integration into existing curricula.
