--- a/paper/sections/08-workflow.tex
+++ b/paper/sections/08-workflow.tex
@@ -1,36 +1,130 @@
 \section{Development Workflow}
 \label{sec:workflow}
 
-% TODO: Extract content from docs/chapters/microsim-dev-workflow.md
-% Key sections to include:
-% - AI-assisted generation process
-% - Template-based development
-% - Customization prompts
-% - Iterative refinement cycles
-% - Testing and validation
-% - Metadata generation
-% - Deployment procedures
+The development of Educational MicroSims follows a systematic workflow that leverages existing resources, generative AI, prompt engineering, pre-defined rules and structured metadata to allow non-programmers to create personalized learning experiences. This workflow transforms educational needs into interactive simulations through a sophisticated pipeline that maintains pedagogical rigor while enabling rapid development and deployment at scale.
+
+The workflow addresses the scalability challenges in educational technology by providing a systematic approach that begins with repository discovery and continues through AI-assisted generation, iterative refinement, comprehensive testing, metadata creation, and intelligent system integration. This process enables educators to create highly targeted simulations that adapt to individual student needs while maintaining technical quality and educational effectiveness.
 
 \subsection{AI-Assisted Generation}
 
+The AI-assisted generation process represents the core innovation of the MicroSims development workflow, enabling educators without programming expertise to create sophisticated interactive simulations through natural language specifications and template-based development patterns.
+
 \subsubsection{Natural Language Specification}
+
+The development process begins with educators providing natural language descriptions of their educational requirements, which are then systematically converted into technical specifications through structured prompting protocols. This approach enables domain experts to focus on pedagogical considerations while AI systems handle the technical implementation details.
+
+\textbf{Educational Requirements Specification}: Educators provide structured descriptions that include subject area, grade level, learning objectives, duration requirements, and Bloom's taxonomy levels. For example, a specification might request "a MicroSim for teaching quadratic functions to high school algebra students (grades 9-10) that enables students to explore the relationships between coefficients and parabola characteristics through interactive parameter manipulation."
+
+\textbf{Technical Requirements Translation}: The natural language specifications are systematically translated into technical requirements including framework selection (p5.js), responsive design parameters, control interface specifications, and accessibility compliance requirements. This translation process ensures that educational intentions are preserved while meeting technical implementation standards.
+
+\textbf{Pedagogical Pattern Recognition}: AI systems analyze the educational requirements to identify appropriate pedagogical patterns from the established MicroSim design vocabulary. These patterns include exploration-based interfaces, parameter manipulation controls, real-time feedback mechanisms, and assessment integration points that align with specified learning objectives.
 
 \subsubsection{Pattern-Based Code Generation}
 
+The code generation process employs established design patterns and template structures that ensure consistency, accessibility, and educational effectiveness across different MicroSims. This pattern-based approach enables reliable generation while maintaining the flexibility necessary for diverse educational applications.
+
+\textbf{Template Selection and Adaptation}: AI systems select appropriate templates based on educational requirements and technical specifications. Templates provide proven interaction patterns, responsive design frameworks, effective control placement, and accessibility considerations that serve as foundations for new simulations.
+
+\textbf{Standardized Architecture Implementation}: Generated code follows the established MicroSim architecture with separated drawing and control regions, standardized variable naming conventions, comprehensive documentation, and consistent user interface patterns. This architectural consistency enables predictable behavior and simplified maintenance across large collections of simulations.
+
+\textbf{Educational Model Integration}: The generation process incorporates the mathematical models, algorithms, and computational methods specified in the educational requirements. Model documentation includes equations, assumptions, limitations, and variable specifications that support both educational transparency and learning analytics integration.
+
 \subsubsection{Iterative Refinement}
+
+The development workflow includes systematic iterative refinement cycles that enable continuous improvement through preview testing, feedback collection, and targeted modifications. This iterative approach ensures that generated simulations meet both educational objectives and usability requirements.
+
+\textbf{Preview and Testing Integration}: Modern AI-assisted development environments provide real-time preview capabilities that allow educators to test functionality immediately upon generation. This rapid feedback cycle enables quick identification of areas requiring modification or enhancement without extensive technical review processes.
+
+\textbf{Refinement Prompt Engineering}: Educators can request specific modifications through structured refinement prompts that specify control additions, removals, or modifications while maintaining the underlying architectural patterns. These prompts enable precise adjustments without requiring comprehensive regeneration of the entire simulation.
+
+\subsection{Repository Discovery and Template Selection}
+
+The development workflow begins with systematic discovery of existing educational simulation repositories and identification of appropriate templates that align with educational objectives. This discovery process leverages faceted search capabilities to efficiently locate relevant resources and development starting points.
+
+\textbf{Repository Exploration}: Educators begin by exploring established repositories such as PhET Interactive Simulations from the University of Colorado Boulder, GitHub repositories containing AI-generated microsimulations, and commercial platforms like Gizmos by ExploreLearning. These repositories serve as starting points for discovering existing resources and identifying templates for creating new MicroSims.
+
+\textbf{Faceted Search Implementation}: Modern educational repositories implement sophisticated search capabilities that enable multi-dimensional filtering across subject areas (Mathematics, Science, Computer Science, Engineering), grade levels (Elementary, Middle School, High School, Undergraduate), learning objectives (Bloom's taxonomy levels), and technical requirements (duration, device compatibility, accessibility features).
+
+\textbf{Template Selection Process}: Once educators identify similar MicroSims that align with their needs, these resources serve as templates for generating customized versions. The template selection process involves identifying core functionality, analyzing technical components, and extracting educational elements that can be adapted for new learning contexts.
 
 \subsection{Customization and Modification}
 
+The customization phase enables educators to adapt existing templates and generated simulations to meet specific pedagogical requirements while maintaining technical quality and educational effectiveness.
+
 \subsubsection{Educator-Driven Adaptation}
 
-\subsubsection{Student Exploration}
+Educator-driven adaptation processes enable domain experts to modify simulations without requiring extensive programming knowledge while ensuring that educational objectives remain central to the development process.
 
-\subsection{Quality Assurance}
+\textbf{Structured Customization Prompts}: Educators can request specific modifications through comprehensive prompts that specify educational requirements, technical modifications, and pedagogical considerations. These prompts include subject area specifications, learning objective alignments, control interface requirements, visual design preferences, and assessment integration needs.
+
+\textbf{Parameter Modification}: The workflow supports systematic modification of simulation parameters including variable ranges, default values, step increments, and units of measurement. These modifications enable fine-tuning of educational experiences to match specific curriculum requirements and student ability levels.
+
+\textbf{Interface Customization}: Educators can request additions, removals, or modifications to user interface elements including sliders, buttons, checkboxes, dropdown menus, and display components. The customization process maintains responsive design principles and accessibility compliance while accommodating diverse pedagogical approaches.
+
+\subsubsection{Student Exploration and Extension}
+
+The framework supports student-driven exploration and extension activities that enable learners to modify and extend simulations as part of their educational experience.
+
+\textbf{Guided Modification Activities}: Students can participate in structured activities where they modify simulation parameters, add new features, or extend existing functionality under educator guidance. These activities provide authentic programming experiences while reinforcing subject matter learning.
+
+\textbf{Open-Ended Exploration}: Advanced students can engage in open-ended exploration where they identify limitations in existing simulations and propose enhancements that address real-world applications or extend the mathematical models to more complex scenarios.
+
+\subsection{Quality Assurance and Validation}
+
+The workflow incorporates comprehensive quality assurance procedures that ensure generated simulations meet educational effectiveness, technical reliability, and accessibility standards across diverse deployment environments.
 
 \subsubsection{Functional Testing}
 
+Functional testing procedures verify that generated simulations operate correctly across different browsers, devices, and usage scenarios while maintaining performance standards appropriate for educational environments.
+
+\textbf{Cross-Platform Compatibility}: Testing protocols verify functionality across major web browsers (Chrome, Firefox, Safari, Edge) and mobile platforms (iOS Safari, Android Chrome). Performance optimization ensures smooth operation on lower-powered devices commonly found in educational environments, including older tablets and budget smartphones.
+
+\textbf{Responsive Design Validation}: Testing procedures verify that responsive design implementations adapt correctly to different screen sizes and container dimensions. This validation ensures that simulations remain usable when embedded in learning management systems, digital textbooks, or other educational platforms with varying layout constraints.
+
+\textbf{Integration Testing}: Comprehensive testing verifies iframe integration capabilities, learning management system compatibility, and educational analytics data collection functionality. This testing ensures reliable deployment across diverse educational technology ecosystems.
+
 \subsubsection{Pedagogical Review}
+
+Pedagogical review processes ensure that generated simulations effectively support intended learning objectives while maintaining educational best practices and theoretical foundations.
+
+\textbf{Learning Objective Alignment}: Review procedures verify that simulation features, interaction patterns, and assessment opportunities directly support specified learning objectives. This alignment assessment ensures that technical capabilities serve educational purposes rather than existing as standalone features.
+
+\textbf{Cognitive Load Assessment}: Reviews evaluate the cognitive load imposed by simulation interfaces and interaction requirements, ensuring that extraneous cognitive load is minimized while germane cognitive load supporting learning is optimized. This assessment draws on established cognitive load theory principles and educational psychology research.
+
+\textbf{Educational Effectiveness Validation}: Systematic evaluation with representative student populations verifies that simulations achieve intended learning outcomes and that interaction patterns support rather than hinder educational goals. This validation provides evidence-based assessment of pedagogical effectiveness.
 
 \subsubsection{Accessibility Validation}
 
-% Additional content to be extracted from source files
+Accessibility validation ensures that generated simulations comply with educational accessibility standards and provide inclusive learning experiences for students with diverse abilities and assistive technology requirements.
+
+\textbf{Technical Compliance Testing}: Automated and manual testing procedures verify compliance with Web Content Accessibility Guidelines (WCAG 2.1 AA standards), Section 508 requirements, and educational accessibility best practices. This testing includes screen reader compatibility, keyboard navigation functionality, and color contrast verification.
+
+\textbf{Assistive Technology Testing}: Testing procedures verify compatibility with common assistive technologies including screen readers, alternative input devices, and mobility assistance tools. This testing ensures that students with disabilities can access and interact with simulations effectively.
+
+\textbf{Universal Design Validation}: Reviews assess how well simulations implement universal design principles that benefit all learners, including clear visual hierarchies, consistent interaction patterns, and multiple representation modalities that support diverse learning preferences and abilities.
+
+\subsection{Metadata Generation and Documentation}
+
+Once simulations are finalized and validated, the workflow includes systematic generation of comprehensive metadata that enables discovery, cataloging, and integration with educational technology systems. This metadata follows established schema specifications and supports sophisticated search and recommendation capabilities.
+
+\textbf{Automated Metadata Creation}: The workflow leverages AI systems to generate comprehensive JSON metadata files that follow the Educational MicroSim Metadata Schema. This automated process ensures consistency and completeness while reducing the administrative burden on educators. Generated metadata includes Dublin Core elements, educational specifications, technical requirements, user interface documentation, simulation models, and analytics specifications.
+
+\textbf{Educational Context Documentation}: The metadata generation process captures detailed educational context including learning objectives, curriculum standards alignment, prerequisite knowledge requirements, assessment opportunities, and instructional strategy recommendations. This documentation enables sophisticated search and filtering capabilities that help educators locate resources that precisely match their pedagogical needs.
+
+\textbf{Technical Specification Recording}: Comprehensive technical metadata documents framework dependencies, performance characteristics, device compatibility requirements, and accessibility features. This technical documentation enables system administrators and educational technologists to make informed decisions about deployment and integration requirements.
+
+\textbf{Usage Pattern Documentation}: The metadata includes recommendations for pedagogical implementation, suggested classroom activities, assessment questions aligned with different Bloom's taxonomy levels, and extension activities. This usage documentation helps educators understand how to effectively integrate simulations into their instructional practice.
+
+\subsection{Deployment and Integration}
+
+The final phase of the development workflow involves systematic deployment procedures and integration with intelligent learning systems that enable personalized educational experiences and continuous improvement through learning analytics.
+
+\textbf{Learning Management System Integration}: The deployment process includes standardized procedures for integrating MicroSims with common learning management systems through iframe embedding, single sign-on authentication, and grade passback functionality. This integration enables seamless incorporation of simulations into existing course structures and assessment workflows.
+
+\textbf{Intelligent Textbook Integration}: Simulations are integrated into adaptive learning sequences within intelligent textbook systems that provide personalized learning paths, prerequisite assessment, adaptive difficulty adjustment, and remediation triggering based on individual student performance data. This integration transforms isolated simulations into components of coherent, personalized learning experiences.
+
+\textbf{Learning Analytics Implementation}: The deployment process includes implementation of comprehensive learning analytics data collection following xAPI specifications. These analytics capture detailed interaction events, performance measures, engagement indicators, and learning progress markers that enable continuous system improvement and personalized recommendation generation.
+
+\textbf{Recommendation Engine Integration}: Deployed simulations become part of recommendation systems that use collected learning analytics data to make evidence-based suggestions about resource selection, optimal timing for introduction, and personalized parameter settings. These recommendation capabilities enable increasingly sophisticated educational personalization as the system accumulates data from student interactions.
+
+The development workflow represents a comprehensive pipeline that transforms educational needs into personalized, interactive learning experiences through systematic application of AI-assisted generation, iterative refinement, comprehensive validation, structured metadata creation, and intelligent system integration. This workflow addresses the scalability challenges in educational technology while maintaining pedagogical rigor and technical quality, creating a foundation for educational technology ecosystems that become more effective over time through accumulated learning analytics and continuous improvement processes.
