--- a/paper/main.tex
+++ b/paper/main.tex
@@ -53,7 +53,9 @@
     \and
     Dan McCreary \\
     \texttt{dan.mccreary@gmail.com}
-    % Add additional authors and affiliations as needed
+    \and
+    Troy A. Peterson \\
+    \texttt{troy@mtn.org}
 }
 
 
