--- a/paper/sections/references.bib
+++ b/paper/sections/references.bib
@@ -187,8 +187,36 @@
   note = {Accessed: 2024-01-15}
 }
 
+% Elementary Systems Thinking Research
+@article{eric2009,
+  author = {Hung, William},
+  title = {An Investigation of the Potential of Interactive Simulations for Developing System Thinking Skills in Elementary School: {A} Case Study with Fifth-Graders and Sixth-Graders},
+  journal = {International Journal of Science Education},
+  volume = {31},
+  number = {9},
+  pages = {1183--1208},
+  year = {2009},
+  month = {March},
+  doi = {10.1080/09500690701749313},
+  url = {https://eric.ed.gov/?id=EJ833089},
+  note = {ERIC Number: EJ833089}
+}
+
+% Digital Simulations Systematic Review
+@article{mdpi2024,
+  author = {Rosário, Ana Teresa and Cardoso, Ana Paula and Rodrigues, Paulo},
+  title = {Digital Simulations in {STEM} Education: Insights from Recent Empirical Studies, a Systematic Review},
+  journal = {Digital},
+  volume = {5},
+  number = {1},
+  pages = {10},
+  year = {2024},
+  publisher = {MDPI},
+  doi = {10.3390/digital5010010},
+  url = {https://www.mdpi.com/2673-8392/5/1/10}
+}
+
 % TODO: Add additional references from:
 % - docs/why/motivation.md (Dale, World Bank, etc.)
-% - docs/why/deep-research-final.md (ERIC database, MDPI studies)
 % - docs/chapters/microsims-in-the-ed-tech-landscape.md (commercial platforms)
 % - Any additional sources cited in the documentation
